 $Id: ChangeLog,v 1.131.2.25.2.47 2010/04/02 03:32:04 uehira Exp $

2010-04-02  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* configure.in : added option '--disable-fortran'.
	* compatible with automake-1.10.
	* mkinstalldirs : you can remove, if you use automake-1.10.
	* Version 2.0.12 released.

2010-04-01  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* use libtool (ver.2.2.6b) for shared library.
	* Version 2.0.11 released.

2010-03-06  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/cvt.[ch] : created. u-law audio format.
	* src/dewin.c : cvt() moved to 'cvt.c'.

2010-02-28  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/pltxy.[ch] : created.
	* hypomhc.c, select_bylatlon.c, select_stations.c, win.c :
	  pltxy() moved to 'pltxy.c'.
	* Version 2.0.10 released.

2010-02-18  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/fromtape.c, src/rtape.c :
	  mt_pos(), read_exb() [renamed read_exb1()] : moved to 'winlib.c'.
	  some macros (TRY_LIMIT, TIME[1-3]) also moved to 'winlib.c'.

2010-02-17  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* e_ch[241] array moved to 'winlib.h'. (for old format)
	* src/fromtape.c : 64 bit clean?

2010-02-16  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/wtape.c : 64 bit clean?
	* src/setexb.c : 64 bit clean?

2010-02-03  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* configure.in : check sys/mtio.h (for fromtape, rtape, wtape).
	If sys/mtio.h does not exist, these programs are not compiled
	(ex. Mac OS X 10.6).
	* src/raw2mon : check buffer overflow.

2010-02-02  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/insert_raw : 64 bit clean?
	* src/win_system.c : merged into src/winlib.c
	* src/win_system.h : merged into src/winlib.h
 	* Version 2.0.9 released.

2010-01-12  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/winlib.c, src/winadd.c, src/wdiskts : bcd2time()-->bcd_t(), time2bcd()-->t_bcd()

2010-01-04  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/wdiskts : 64 bit clean?