@@ -1,4 +1,4 @@
-/* $Id: select_stations.c,v 1.3.8.2 2010/02/28 09:09:06 uehira Exp $ */
+/* $Id: select_stations.c,v 1.3.8.3 2010/04/03 02:11:21 uehira Exp $ */
 
 /* select_stations  1999.11.9  urabe */
 /* debugged 2004.1.28  urabe */
@@ -10,6 +10,7 @@
 #include <stdio.h>
 #include <math.h>
 
+#include "pltxy.h"
 #include "subst_func.h"
 
 #define NAME_PRG "select_stations"
