@@ -1,4 +1,7 @@
- $Id: ChangeLog,v 1.131.2.25.2.47 2010/04/02 03:32:04 uehira Exp $
+ $Id: ChangeLog,v 1.131.2.25.2.48 2010/04/03 02:11:21 uehira Exp $
+
+2010-04-03  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
+	* use pltxy() from library : hypomhc, select_bylatlon, select_stations
 
 2010-04-02  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
 	* configure.in : added option '--disable-fortran'.
